<resources>
    <string name="app_name">ALA</string>
    <string name="login">Přihlášení na prodejnu</string>
    <string name="hint_office">Prodejna</string>
    <string name="registration">Registrace prodejny</string>
    <string name="hint_name_office">Název prodejny</string>
    <string name="hint_search_order">Vyhledat...</string>
    <string name="hint_address_office">Adresa</string>
    <string name="hint_password">Heslo</string>
    <string name="btn_registration">Registrovat</string>
    <string name="btn_login">Přihlásit</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="btn_register_activity">Registrovat novou prodejnu</string>
    <string name="btn_login_activity">Přihlásit se na prodejnu</string>
</resources>