<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    style="@style/background"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_ala"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_office"
        android:text="@string/login"
        android:textColor="@color/secondary"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/edT_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="12dp"
        />

    <EditText
        android:id="@+id/edT_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edT_email" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="154dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:text="PŘIHLÁSIT"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/textView"
        android:id="@+id/btn_register_activity"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/transparent"
        android:text="@string/btn_register_activity"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        tools:ignore="MissingConstrains"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <RelativeLayout
        style="@style/lines"
        android:id="@+id/line1"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
        app:layout_constraintEnd_toStartOf="@+id/btn_login"
       >



    </RelativeLayout>

    <RelativeLayout
        style="@style/lines"
        android:id="@+id/line2"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toEndOf="@+id/btn_login">


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>